--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,10 @@ body {
 
 /* navbar */
 
+.show {
+  display: flex !important;
+}
+
 nav {
   display: flex;
   align-items: center;
@@ -26,6 +30,7 @@ nav {
 /* ocultar mobile */
 nav .mobile {
   display: none;
+  width: 100%;
 }
 
 /* efecto menu subrayado */
@@ -62,6 +67,20 @@ nav ul li > a {
   color: white;
 }
 
+nav .mobile .header a {
+  color: white;
+  text-decoration: none;
+  display: inline-flex;
+  text-decoration: none;
+  padding: 20px;
+}
+
+nav .mobile .header #bmenu {
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+}
 nav .menu {
   position: absolute;
   /* display: flex; */
@@ -69,6 +88,7 @@ nav .menu {
   flex-direction: column;
   min-width: 200px;
   background-color: white;
+  margin-top: 47px;
 }
 
 nav .menu a {
@@ -80,4 +100,60 @@ nav .menu a {
 nav .menu a:hover {
   background-color: black;
   color: white;
+}
+
+nav .more {
+  display: none;
+}
+
+/* creando media query menu */
+@media screen and (max-width: 1202px) {
+  nav .link-hide {
+    display: none;
+  }
+  nav .more {
+    display: flex;
+  }
+}
+
+nav .mobile .links {
+  display: none;
+  flex-direction: column;
+}
+nav .mobile .links a {
+  display: block;
+  padding: 10px 20px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+nav .mobile .links a:hover {
+  display: block;
+  padding: 10px 20px;
+
+  text-decoration: none;
+  color: black;
+  background-color: white;
+  font-size: 20px;
+}
+
+@media screen and (max-width: 640px) {
+  nav .mobile .header {
+    background-color: black;
+    width: 100%;
+    padding: 0;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  nav .mobile {
+    display: block;
+  }
 }
