--- a/src/css/main.css
+++ b/src/css/main.css
@@ -115,6 +115,65 @@ header {
   height: 100vh;
 }
 
+/* banner*/
+/* fondo transparent de fondo al lado
+ de la imagen un position absolute para moberlo */
+#banner {
+  font-size: 1.5rem;
+  padding: 40px;
+  text-align: center;
+  width: 500px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  position: absolute;
+  z-index: 100;
+  top: 200px;
+  right: 100px;
+}
+
+.green-button {
+  border: 0;
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 40px;
+  background-color: yellowgreen;
+  color: black;
+  font-weight: bolder;
+  text-decoration: none;
+}
+.green-button:hover {
+  background-color: rgb(138, 207, 33);
+}
+
+.green-link {
+  border: 0;
+  display: inline-flex;
+  position: relative; /* para que tome el tamaño relativo del enlace y no del ancho del contenido*/
+  font-size: 17px;
+  align-items: center;
+  padding: 10px 40px;
+  color: yellowgreen;
+  font-weight: bolder;
+  text-decoration: none;
+}
+
+.green-link::before {
+  content: "";
+  position: absolute;
+  display: block;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+
+  background-color: greenyellow;
+}
+
+.green-link:hover::before {
+  transform: scaleX(0.7);
+}
 /* creando media query menu */
 @media screen and (max-width: 1260px) {
   nav .link-hide {
