--- a/src/css/main.css
+++ b/src/css/main.css
@@ -118,6 +118,25 @@ header {
 /* banner*/
 /* fondo transparent de fondo al lado
  de la imagen un position absolute para moberlo */
+#banner h2 {
+  font-size: 2.4rem;
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+#banner h2::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  bottom: -50px;
+  left: 0;
+
+  transform: scale(0.4) skewY(-20deg) rotate(20deg);
+  background-color: greenyellow;
+}
+
 #banner {
   font-size: 1.5rem;
   padding: 40px;
@@ -212,7 +231,7 @@ nav .mobile .links a:hover {
   font-size: 20px;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 672px) {
   nav .mobile .header {
     background-color: black;
     width: 100%;
@@ -241,5 +260,11 @@ nav .mobile .links a:hover {
     height: 40vh;
     /* mover imagen un poco abajo */
     background-position: center 40px;
+  }
+
+  #banner {
+    position: initial !important;
+    z-index: 100;
+    width: 100%;
   }
 }
